# furikaeri-flashcards-app

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  compose.yml  developers.md  pyproject.toml
flashcards/app/api/: AUTH.md  conftest.py  pyproject.toml  study_config.yaml.example
flashcards/app/api/app/: __init__.py  db.py  db_test.py  health_test.py  logging_config.py  logging_config_test.py  main.py  main_test.py  routes_test.py  settings.py  settings_test.py  study_config.py  study_config_test.py  version.py  version_test.py
flashcards/app/api/app/auth/: __init__.py  dependencies.py  jwt_utils.py  password.py
flashcards/app/api/app/cards/: __init__.py  factory.py  factory_test.py  types.py  types_test.py
flashcards/app/api/app/exports/: __init__.py  csv_export.py  csv_export_test.py  deck_export.py  deck_export_test.py
flashcards/app/api/app/imports/: __init__.py  adapters.py  adapters_test.py  import_csv_edge_cases_test.py  service.py  service_test.py  utils.py  utils_test.py
flashcards/app/api/app/middleware/: __init__.py  auth_session.py  rate_limit.py  rate_limit_test.py  security_headers.py  security_headers_test.py
flashcards/app/api/app/migrations/: 0001_init.sql  0002_sessions.sql  0003_personalization.sql  0004_events_metrics_index.sql  0005_learning_steps.sql  0006_suspended.sql  0007_daily_goal.sql  0008_include_listening.sql  0009_auth.sql  0010_auth_sessions.sql  0011_card_study_notes.sql
flashcards/app/api/app/personalization/: __init__.py  (+4 more)
flashcards/app/api/scripts/: audit.sh  reset_data.py  reset_data_test.py
(+121 files in other folders)
