# Root project - for pytest from repo root (e.g. uv run pytest flashcards).
[project]
name = "furikaeri"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "httpx>=0.26",
    "python-multipart>=0.0.9",
    "fastapi>=0.109",
]
